submission-techchallengeapp/kubernetes-manifests/app-namespace.yaml
# This manifest creates namesapce for the apps on AKS
kind: Namespace
apiVersion: v1
metadata:
  name: servian
  labels:
    name: servian
