submission-techchallengeapp/kubernetes-manifests/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: servian-techchallengeapp
  namespace: servian
  labels:
    app: servian
spec:
  type: ClusterIP
  ports:
  - name: tcp3000
    port: 3000
    #port: 80
    targetPort: 3000
  selector:
    app: servian
