submission-techchallengeapp/kubernetes-manifests/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: servian
  name: servian-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servian-techchallengeapp
            port:
              number: 3000
